--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -13,8 +13,14 @@ body {
 }
 
 body {
-    font-family: "Source Sans Pro","Helvetica Neue",Helvetica,Arial,sans-serif;
+    /* font-family: "Source Sans Pro","Helvetica Neue",Helvetica,Arial,sans-serif; */
+    font-family: font91409;
 }
+
+.mainTitle{
+font-family: font121313;
+}
+
 
 .text-vertical-center {
     display: table-cell;
@@ -185,6 +191,41 @@ hr.small {
 	width: 10px;
 }
 
+/* Indicators list style */
+.article-slide .carousel-indicators {
+    bottom: 0;
+    left: 0;
+    margin-left: 0px;
+    width: 100%;
+	position: static;
+	margin-top:5px;
+}
+/* Indicators list style */
+.article-slide .carousel-indicators li {
+    border: medium none;
+    border-radius: 0;
+    float: left;
+    height: 54px;
+    margin-bottom: 5px;
+    margin-left: 0;
+    margin-right: 5px !important;
+    margin-top: 0;
+    width: 100px;
+}
+/* Indicators images style */
+.article-slide .carousel-indicators img {
+    border: 2px solid #FFFFFF;
+    float: left;
+    height: 54px;
+    left: 0;
+    width: 100px;
+}
+/* Indicators active image style */
+.article-slide .carousel-indicators .active img {
+    border: 2px solid #428BCA;
+    opacity: 0.7;
+}
+
 /* About */
 
 .about {
@@ -289,3 +330,11 @@ footer address {
 .modal-body {
 	font-size: 14pt;
 }
+
+#calendarContainer {
+		width: 100%;
+		}
+		
+#map {
+        height: 100%;
+      }
