--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -224,6 +224,7 @@ hr.small {
 .article-slide .carousel-indicators .active img {
     border: 2px solid #428BCA;
     opacity: 0.7;
+	width: 100%;
 }
 
 /* About */
