--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -28,11 +28,19 @@ font-family: font121313;
     vertical-align: middle;
 }
 
+
 .text-vertical-center h1 {
     margin: 0;
     padding: 0;
     font-size: 4.5em;
     font-weight: 700;
+}
+
+@media(max-width:450px) {
+    .text-vertical-center h1 {
+    font-size: 3.5em;
+    font-weight: 700;
+}
 }
 
 /* Custom Button Styles */
