Finished Boat Rental Section

--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -265,6 +265,18 @@ hr.small {
     -o-background-size: cover;
 }
 
+.calloutCat {
+    display: table;
+    width: 100%;
+    height: 650px;
+    color: #fff;
+    background: url(../img/cat_callout.jpg) no-repeat center center scroll;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+}
+
 /* Portfolio */
 
 .portfolio {
