--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -169,7 +169,7 @@ hr.small {
     position: relative;
     width: 100%;
     height: 100%;
-    background: url(../img/bg1.jpg) no-repeat center center scroll;
+    background: url(../img/bg1-opt.jpg) no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -259,7 +259,7 @@ hr.small {
     width: 100%;
     height: 400px;
     color: #fff;
-    background: url(../img/callout2.jpg) no-repeat center center scroll;
+    background: url(../img/callout2-opt.jpg) no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -272,7 +272,7 @@ hr.small {
     width: 100%;
     height: 650px;
     color: #fff;
-    background: url(../img/cat_callout2.jpg) no-repeat center center scroll;
+    background: url(../img/cat_callout-opt.jpg) no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
