Added alt font in to fix mobile.

--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -4,8 +4,8 @@
 @charset "utf-8";@font-face{font-family:"font91409";font-family:"font91409";src:url("https://www.fontify.me/cm/80aa79216ca7539cf9583442ef908be3/AvenirNextLTPro-Regular.eot");src:url("https://www.fontify.me/cm/80aa79216ca7539cf9583442ef908be3/AvenirNextLTPro-Regular.eot?#iefix") format("embedded-opentype"),url("https://www.fontify.me/cm/80aa79216ca7539cf9583442ef908be3/AvenirNextLTPro-Regular.woff") format("woff"),url("https://www.fontify.me/cm/80aa79216ca7539cf9583442ef908be3/AvenirNextLTPro-Regular.ttf") format("truetype"),url("https://www.fontify.me/cm/80aa79216ca7539cf9583442ef908be3/AvenirNextLTPro-Regular.svg#AvenirNextLTPro-Regular") format("svg");font-weight:normal;font-style:normal;}
 /* Always in my Heart */
 @charset "utf-8";@font-face{font-family:"font32550";font-family:"font32550";src:url("https://www.fontify.me/cm/5cc0a2829d2fffea539b815a11d3e328/Always-In-My-Heart.woff") format("woff");font-weight:normal;font-style:normal;}
-/* Always in my Heart Alt
-@charset "utf-8";@font-face{font-family:"font146341";font-family:"font146341";src:url("https://www.fontify.me/cm/90512cadc6020c537e2503057067ebaf/Always-In-My-Heart.woff") format("woff");font-weight:normal;font-style:normal;}*/
+/* Always in my Heart Alt */
+@charset "utf-8";@font-face{font-family:"font146341";font-family:"font146341";src:url("https://www.fontify.me/cm/90512cadc6020c537e2503057067ebaf/Always-In-My-Heart.woff") format("woff");font-weight:normal;font-style:normal;}
 
 /*!
  * Start Bootstrap - Stylish Portfolio (http://startbootstrap.com/)
