--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -1,11 +1,3 @@
-/* Cinzel */
-@charset "utf-8";@font-face{font-family:"font121313";font-family:"font121313";src:url("https://www.fontify.me/cm/71392849d002a091e8f5b8f70160d34d/cinzel-v4-latin-regular.woff") format("woff");font-weight:normal;font-style:normal;}
-/* Avenir */
-@charset "utf-8";@font-face{font-family:"font91409";font-family:"font91409";src:url("https://www.fontify.me/cm/80aa79216ca7539cf9583442ef908be3/AvenirNextLTPro-Regular.eot");src:url("https://www.fontify.me/cm/80aa79216ca7539cf9583442ef908be3/AvenirNextLTPro-Regular.eot?#iefix") format("embedded-opentype"),url("https://www.fontify.me/cm/80aa79216ca7539cf9583442ef908be3/AvenirNextLTPro-Regular.woff") format("woff"),url("https://www.fontify.me/cm/80aa79216ca7539cf9583442ef908be3/AvenirNextLTPro-Regular.ttf") format("truetype"),url("https://www.fontify.me/cm/80aa79216ca7539cf9583442ef908be3/AvenirNextLTPro-Regular.svg#AvenirNextLTPro-Regular") format("svg");font-weight:normal;font-style:normal;}
-/* Always in my Heart */
-@charset "utf-8";@font-face{font-family:"font32550";font-family:"font32550";src:url("https://www.fontify.me/cm/5cc0a2829d2fffea539b815a11d3e328/Always-In-My-Heart.woff") format("woff");font-weight:normal;font-style:normal;}
-/* Always in my Heart Alt 
-@charset "utf-8";@font-face{font-family:"font146341";font-family:"font146341";src:url("https://www.fontify.me/cm/90512cadc6020c537e2503057067ebaf/Always-In-My-Heart.woff") format("woff");font-weight:normal;font-style:normal;} */
 
 /*!
  * Start Bootstrap - Stylish Portfolio (http://startbootstrap.com/)
@@ -23,11 +15,13 @@ body {
 
 body {
     /* font-family: "Source Sans Pro","Helvetica Neue",Helvetica,Arial,sans-serif; */
-    font-family: font91409;
+    /* font-family: font91409; */
+       font-family: 'Nunito', sans-serif;	
 }
 
 .mainTitle{
-font-family: font121313;
+/* font-family: font121313; */
+font-family: 'Cinzel', serif;
 }
 
 
@@ -392,7 +386,8 @@ iframe {margin:0px auto;}
 
 
 .script {
-	font-family: font146341;
+	/* font-family: font146341; */
+	font-family: 'Sue Ellen Francisco', cursive;
 	font-size: 30pt;
 	color: #006666;
 	} 
