--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -467,5 +467,11 @@ iframe {margin:0px auto;}
 }
 
 iframe {
-	height:100%;
+	height:325px;
+}
+
+@media(max-width:991px) {
+    iframe {
+        height: 740px;
+    }
 }
